--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,42 @@
-geopy==2.4.0
-matplotlib==3.7.2
-numpy==1.23.5
-pandas==2.0.3
-seaborn==0.12.2
-streamlit==1.26.0
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
+appnope==0.1.3
+asttokens==2.2.1
+backcall==0.2.0
+comm==0.1.3
+debugpy==1.6.7
+decorator==5.1.1
+executing==1.2.0
+fsspec==2023.10.0
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/future-0.18.2-py3-none-any.whl
+ipykernel==6.24.0
+ipython==8.14.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.3.2
+jupyter_client==8.3.0
+jupyter_core==5.3.1
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mpmath==1.3.0
+nest-asyncio==1.5.6
+networkx==3.2
+numpy==1.26.1
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==3.9.1
+prompt-toolkit==3.0.39
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.15.1
+scikit-learn==1.3.2
+scipy==1.11.3
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/six-1.15.0-py2.py3-none-any.whl
+stack-data==0.6.2
+sympy==1.12
+threadpoolctl==3.2.0
+torchsampler==0.1.2
+traitlets==5.9.0
+tzdata==2023.3
+wcwidth==0.2.6
