--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 *.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
+Models/MedicalClassification_ResNet50V2/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
