--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,366 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
-appnope==0.1.3
-asttokens==2.2.1
-backcall==0.2.0
-comm==0.1.3
-debugpy==1.6.7
-decorator==5.1.1
-executing==1.2.0
-fsspec==2023.10.0
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/future-0.18.2-py3-none-any.whl
-ipykernel==6.24.0
-ipython==8.14.0
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.3.2
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
-MarkupSafe==2.1.3
-matplotlib-inline==0.1.6
-mpmath==1.3.0
-nest-asyncio==1.5.6
-networkx==3.2
-numpy==1.26.1
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.9.1
-prompt-toolkit==3.0.39
-ptyprocess==0.7.0
-pure-eval==0.2.2
-Pygments==2.15.1
-scikit-learn==1.3.2
-scipy==1.11.3
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/six-1.15.0-py2.py3-none-any.whl
-stack-data==0.6.2
-sympy==1.12
-threadpoolctl==3.2.0
-torchsampler==0.1.2
-traitlets==5.9.0
-tzdata==2023.3
-wcwidth==0.2.6
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-arm64
+absl-py=2.0.0=pypi_0
+altair=5.1.2=pyhd8ed1ab_0
+aom=3.7.0=h463b476_0
+appdirs=1.4.4=pypi_0
+appnope=0.1.3=pyhd8ed1ab_0
+asgiref=3.7.2=pypi_0
+asttokens=2.4.1=pyhd8ed1ab_0
+astunparse=1.6.3=pypi_0
+attr=0.3.1=pypi_0
+attrs=23.1.0=pyh71513ae_1
+aws-c-auth=0.7.6=h30f9597_0
+aws-c-cal=0.6.9=hea61927_1
+aws-c-common=0.9.8=h93a5062_0
+aws-c-compression=0.2.17=hea61927_6
+aws-c-event-stream=0.3.2=h32206d9_6
+aws-c-http=0.7.14=h673bc1b_1
+aws-c-io=0.13.35=he1b4ce3_8
+aws-c-mqtt=0.9.9=h2364c62_0
+aws-c-s3=0.3.23=h3940a1a_1
+aws-c-sdkutils=0.1.12=hea61927_5
+aws-checksums=0.1.17=hea61927_5
+aws-crt-cpp=0.24.5=h8bfa36e_5
+aws-sdk-cpp=1.11.182=h2baef6e_5
+azure-core=1.29.5=pypi_0
+azure-storage-blob=12.18.3=pypi_0
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+beautifulsoup4=4.12.2=pypi_0
+bleach=5.0.1=pypi_0
+blinker=1.7.0=pyhd8ed1ab_0
+boto=2.49.0=pypi_0
+boto3=1.16.63=pypi_0
+botocore=1.19.63=pypi_0
+boxing=0.1.4=pypi_0
+brotli=1.1.0=hb547adb_1
+brotli-bin=1.1.0=hb547adb_1
+brotli-python=1.1.0=py311ha891d26_1
+bzip2=1.0.8=h93a5062_5
+c-ares=1.21.0=h93a5062_0
+ca-certificates=2023.7.22=hf0a4a13_0
+cachetools=5.3.2=pyhd8ed1ab_0
+cairo=1.18.0=hd1e100b_0
+certifi=2023.7.22=pyhd8ed1ab_0
+cffi=1.16.0=pypi_0
+charset-normalizer=3.3.2=pyhd8ed1ab_0
+click=8.1.7=unix_pyh707e725_0
+colorama=0.4.6=pypi_0
+comm=0.1.4=pyhd8ed1ab_0
+contourpy=1.2.0=py311hd03642b_0
+coreapi=2.3.3=pypi_0
+coreschema=0.0.4=pypi_0
+cryptography=41.0.5=pypi_0
+cycler=0.12.1=pyhd8ed1ab_0
+dav1d=1.2.1=hb547adb_0
+debugpy=1.8.0=py311ha891d26_1
+decorator=5.1.1=pyhd8ed1ab_0
+deepface=0.0.79=pypi_0
+defusedxml=0.7.1=pypi_0
+django=3.2.20=pypi_0
+django-annoying=0.10.6=pypi_0
+django-cors-headers=3.6.0=pypi_0
+django-debug-toolbar=3.2.1=pypi_0
+django-environ=0.10.0=pypi_0
+django-extensions=3.1.0=pypi_0
+django-filter=2.4.0=pypi_0
+django-model-utils=4.1.1=pypi_0
+django-ranged-fileresponse=0.1.2=pypi_0
+django-rest-swagger=2.2.0=pypi_0
+django-rq=2.5.1=pypi_0
+django-storages=1.12.3=pypi_0
+django-user-agents=0.4.0=pypi_0
+djangorestframework=3.13.1=pypi_0
+drf-dynamic-fields=0.3.0=pypi_0
+drf-flex-fields=0.9.5=pypi_0
+drf-generators=0.3.0=pypi_0
+drf-yasg=1.20.0=pypi_0
+exceptiongroup=1.1.3=pyhd8ed1ab_0
+executing=2.0.1=pyhd8ed1ab_0
+expat=2.5.0=hb7217d7_1
+expiringdict=1.2.2=pypi_0
+ffmpeg=6.1.0=gpl_hb975139_101
+filelock=3.13.1=pyhd8ed1ab_0
+fire=0.5.0=pypi_0
+flask=3.0.0=pypi_0
+flatbuffers=23.5.26=pypi_0
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=hab24e00_0
+fontconfig=2.14.2=h82840c6_0
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.44.0=py311h05b510d_0
+freetype=2.12.1=hadb7bae_2
+fribidi=1.0.10=h27ca646_0
+fsspec=2023.10.0=pypi_0
+gast=0.5.4=pypi_0
+gdown=4.7.1=pypi_0
+gettext=0.21.1=h0186832_0
+gflags=2.2.2=hc88da5d_1004
+git-lfs=3.4.0=hce30654_0
+gitdb=4.0.11=pyhd8ed1ab_0
+gitpython=3.1.40=pyhd8ed1ab_0
+glog=0.6.0=h6da1cb0_0
+gmp=6.3.0=h965bd2d_0
+gmpy2=2.1.2=py311h2ba9262_1
+gnutls=3.7.8=h9f1a10d_0
+google-api-core=2.11.0=pypi_0
+google-auth=2.23.4=pypi_0
+google-auth-oauthlib=1.0.0=pypi_0
+google-cloud-appengine-logging=1.1.0=pypi_0
+google-cloud-audit-log=0.2.0=pypi_0
+google-cloud-core=2.3.2=pypi_0
+google-cloud-logging=2.7.1=pypi_0
+google-cloud-storage=2.5.0=pypi_0
+google-crc32c=1.5.0=pypi_0
+google-pasta=0.2.0=pypi_0
+google-resumable-media=2.3.3=pypi_0
+googleapis-common-protos=1.56.4=pypi_0
+graphite2=1.3.13=h9f76cd9_1001
+grpc-google-iam-v1=0.12.4=pypi_0
+grpcio=1.59.2=pypi_0
+grpcio-status=1.59.2=pypi_0
+gunicorn=21.2.0=pypi_0
+h5py=3.10.0=pypi_0
+harfbuzz=8.3.0=h8f0ba13_0
+htmlmin=0.1.12=pypi_0
+huggingface-hub=0.18.0=pypi_0
+icu=73.2=hc8870d7_0
+idna=3.4=pyhd8ed1ab_0
+ijson=3.2.3=pypi_0
+importlib-metadata=6.8.0=pyha770c72_0
+importlib_metadata=6.8.0=hd8ed1ab_0
+importlib_resources=6.1.1=pyhd8ed1ab_0
+inflection=0.5.1=pypi_0
+ipykernel=6.26.0=pyh3cd1d5f_0
+ipython=8.17.2=pyh31c8845_0
+ipywidgets=8.1.1=pyhd8ed1ab_0
+isodate=0.6.1=pypi_0
+itsdangerous=2.1.2=pypi_0
+itypes=1.2.0=pypi_0
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.2=pyhd8ed1ab_1
+jmespath=0.10.0=pypi_0
+joblib=1.3.2=pypi_0
+jsonschema=3.2.0=pypi_0
+jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+jupyter_client=8.6.0=pyhd8ed1ab_0
+jupyter_core=5.5.0=py311h267d04e_0
+jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
+keras=2.14.0=pypi_0
+kiwisolver=1.4.5=py311he4fd1f5_1
+krb5=1.21.2=h92f50d5_0
+lame=3.100=h1a8c8d9_1003
+launchdarkly-server-sdk=7.5.0=pypi_0
+lcms2=2.15=hf2736f0_3
+lerc=4.0.0=h9a09cb3_0
+libabseil=20230802.1=cxx17_h13dd4ca_0
+libarrow=14.0.1=h7bb5718_1_cpu
+libarrow-acero=14.0.1=had9dd58_1_cpu
+libarrow-dataset=14.0.1=had9dd58_1_cpu
+libarrow-flight=14.0.1=h1011bfc_1_cpu
+libarrow-flight-sql=14.0.1=h660fe36_1_cpu
+libarrow-gandiva=14.0.1=h2b96968_1_cpu
+libarrow-substrait=14.0.1=h594d712_1_cpu
+libass=0.17.1=hf7da4fe_1
+libblas=3.9.0=19_osxarm64_openblas
+libbrotlicommon=1.1.0=hb547adb_1
+libbrotlidec=1.1.0=hb547adb_1
+libbrotlienc=1.1.0=hb547adb_1
+libcblas=3.9.0=19_osxarm64_openblas
+libclang=16.0.6=pypi_0
+libcrc32c=1.1.2=hbdafb3b_0
+libcurl=8.4.0=h2d989ff_0
+libcxx=16.0.6=h4653b0c_0
+libdeflate=1.19=hb547adb_0
+libedit=3.1.20191231=hc8eb9b7_2
+libev=4.33=h642e427_1
+libevent=2.1.12=h2757513_1
+libexpat=2.5.0=hb7217d7_1
+libffi=3.4.2=h3422bc3_5
+libgfortran=5.0.0=13_2_0_hd922786_1
+libgfortran5=13.2.0=hf226fd6_1
+libglib=2.78.1=hd9b11f9_0
+libgoogle-cloud=2.12.0=hfb399a7_4
+libgrpc=1.59.2=hbcf6334_0
+libiconv=1.17=he4db4b2_0
+libidn2=2.3.4=h1a8c8d9_0
+libjpeg-turbo=3.0.0=hb547adb_1
+liblapack=3.9.0=19_osxarm64_openblas
+libllvm15=15.0.7=h504e6bf_3
+libnghttp2=1.58.0=ha4dd798_0
+libopenblas=0.3.24=openmp_hd76b1f2_0
+libopus=1.3.1=h27ca646_1
+libparquet=14.0.1=heaab74a_1_cpu
+libpng=1.6.39=h76d750c_0
+libprotobuf=4.24.4=hc9861d8_0
+libre2-11=2023.06.02=h1753957_0
+libsodium=1.0.18=h27ca646_1
+libsqlite=3.44.0=h091b4b1_0
+libssh2=1.11.0=h7a5bd25_0
+libtasn1=4.19.0=h1a8c8d9_0
+libthrift=0.19.0=h026a170_1
+libtiff=4.6.0=ha8a6c65_2
+libunistring=0.9.10=h3422bc3_0
+libutf8proc=2.8.0=h1a8c8d9_0
+libvpx=1.13.1=hb765f3a_0
+libwebp-base=1.3.2=hb547adb_0
+libxcb=1.15=hf346824_0
+libxml2=2.11.5=h25269f3_1
+libzlib=1.2.13=h53f4e23_5
+llvm-openmp=17.0.4=hcd81f8e_0
+lockfile=0.12.2=pypi_0
+lxml=4.9.3=pypi_0
+lz4-c=1.9.4=hb7217d7_0
+markdown=3.5.1=pypi_0
+markdown-it-py=3.0.0=pyhd8ed1ab_0
+markupsafe=2.1.3=py311heffc1b2_1
+matplotlib=3.8.1=py311ha1ab1f8_0
+matplotlib-base=3.8.1=py311hfdba5f6_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mdurl=0.1.0=pyhd8ed1ab_0
+ml-dtypes=0.2.0=pypi_0
+mpc=1.3.1=h91ba8db_0
+mpfr=4.2.1=h9546428_0
+mpmath=1.3.0=pyhd8ed1ab_0
+mtcnn=0.1.1=pypi_0
+munkres=1.1.4=pyh9f0ad1d_0
+ncurses=6.4=h463b476_2
+nest-asyncio=1.5.8=pyhd8ed1ab_0
+nettle=3.8.1=h63371fa_1
+networkx=3.2.1=pyhd8ed1ab_0
+nltk=3.6.7=pypi_0
+numpy=1.26.0=py311hb8f3215_0
+oauthlib=3.2.2=pypi_0
+openapi-codec=1.3.2=pypi_0
+opencv-python=4.8.1.78=pypi_0
+openh264=2.3.1=hb7217d7_2
+openjpeg=2.5.0=h4c1507b_3
+openssl=3.1.4=h0d3ecfb_0
+opt-einsum=3.3.0=pypi_0
+orc=1.9.0=h7c018df_4
+ordered-set=4.0.2=pypi_0
+p11-kit=0.24.1=h29577a5_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.1.2=pypi_0
+parso=0.8.3=pyhd8ed1ab_0
+pcre2=10.40=hb34f9b4_0
+pexpect=4.8.0=pyh1a96a4e_2
+pickleshare=0.7.5=py_1003
+pillow=10.1.0=py311hb9c5795_0
+pip=23.3.1=pyhd8ed1ab_0
+pixman=0.42.2=h13dd4ca_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+platformdirs=4.0.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.40=pyha770c72_0
+prompt_toolkit=3.0.40=hd8ed1ab_0
+proto-plus=1.22.3=pypi_0
+protobuf=4.25.0=pypi_0
+psutil=5.9.5=py311heffc1b2_1
+psycopg2-binary=2.9.6=pypi_0
+pthread-stubs=0.4=h27ca646_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+pure_eval=0.2.2=pyhd8ed1ab_0
+pyarrow=14.0.1=py311h637fcfe_1_cpu
+pyasn1=0.5.0=pypi_0
+pyasn1-modules=0.3.0=pypi_0
+pycparser=2.21=pypi_0
+pydeck=0.8.0=pyhd8ed1ab_0
+pygments=2.16.1=pyhd8ed1ab_0
+pyparsing=3.1.1=pyhd8ed1ab_0
+pyrfc3339=1.1=pypi_0
+pyrsistent=0.20.0=pypi_0
+pysocks=1.7.1=pyha2e5f31_6
+python=3.11.6=h47c9636_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-json-logger=2.0.4=pypi_0
+python-tzdata=2023.3=pyhd8ed1ab_0
+python_abi=3.11=4_cp311
+pytorch=2.1.0=py3.11_0
+pytz=2023.3.post1=pyhd8ed1ab_0
+pyyaml=6.0.1=py311heffc1b2_1
+pyzmq=25.1.1=py311he9c0408_2
+re2=2023.06.02=h6135d0a_0
+readline=8.2=h92ec313_1
+redis=3.5.3=pypi_0
+referencing=0.30.2=pyhd8ed1ab_0
+requests=2.31.0=pyhd8ed1ab_0
+requests-oauthlib=1.3.1=pypi_0
+retina-face=0.0.13=pypi_0
+rich=13.6.0=pyhd8ed1ab_0
+rpds-py=0.12.0=py311h94f323b_0
+rq=1.10.1=pypi_0
+rsa=4.9=pypi_0
+ruamel-yaml=0.18.5=pypi_0
+ruamel-yaml-clib=0.2.8=pypi_0
+rules=2.2=pypi_0
+s3transfer=0.3.7=pypi_0
+safetensors=0.4.0=pypi_0
+scikit-learn=1.3.2=pypi_0
+scipy=1.11.3=pypi_0
+semver=2.13.0=pypi_0
+sentry-sdk=1.34.0=pypi_0
+setuptools=68.2.2=pyhd8ed1ab_0
+simplejson=3.19.2=pypi_0
+six=1.16.0=pyh6c4a22f_0
+smmap=5.0.0=pyhd8ed1ab_0
+snappy=1.1.10=h17c5cce_0
+soupsieve=2.5=pypi_0
+sqlparse=0.4.4=pypi_0
+stack_data=0.6.2=pyhd8ed1ab_0
+streamlit=1.28.1=pyhd8ed1ab_0
+svt-av1=1.7.0=hb765f3a_0
+sympy=1.12=pypyh9d50eac_103
+tenacity=8.2.3=pyhd8ed1ab_0
+tensorboard=2.14.1=pypi_0
+tensorboard-data-server=0.7.2=pypi_0
+tensorflow=2.14.0=pypi_0
+tensorflow-estimator=2.14.0=pypi_0
+tensorflow-io-gcs-filesystem=0.34.0=pypi_0
+tensorflow-macos=2.14.0=pypi_0
+tensorflow-metal=1.1.0=pypi_0
+termcolor=2.3.0=pypi_0
+thop=0.1.1-2209072238=pypi_0
+threadpoolctl=3.2.0=pypi_0
+timm=0.9.10=pypi_0
+tk=8.6.13=h5083fa2_1
+toml=0.10.2=pyhd8ed1ab_0
+toolz=0.12.0=pyhd8ed1ab_0
+torchaudio=2.1.0=py311_cpu
+torchsampler=0.1.2=pypi_0
+torchvision=0.16.0=py311_cpu
+tornado=6.3.3=py311heffc1b2_1
+tqdm=4.66.1=pypi_0
+traitlets=5.13.0=pyhd8ed1ab_0
+typing-extensions=4.8.0=hd8ed1ab_0
+typing_extensions=4.8.0=pyha770c72_0
+tzdata=2023c=h71feb2d_0
+tzlocal=5.2=py311h267d04e_0
+ua-parser=0.18.0=pypi_0
+ujson=5.8.0=pypi_0
+uritemplate=4.1.1=pypi_0
+urllib3=2.1.0=pyhd8ed1ab_0
+user-agents=2.2.0=pypi_0
+validators=0.22.0=pyhd8ed1ab_0
+watchdog=3.0.0=py311heffc1b2_1
+wcwidth=0.2.10=pyhd8ed1ab_0
+webencodings=0.5.1=pypi_0
+werkzeug=3.0.1=pypi_0
+wheel=0.40.0=pypi_0
+widgetsnbextension=4.0.9=pyhd8ed1ab_0
+wrapt=1.14.1=pypi_0
+x264=1!164.3095=h57fd34a_2
+x265=3.5=hbc6ce65_3
+xmljson=0.2.0=pypi_0
+xorg-libxau=1.0.11=hb547adb_0
+xorg-libxdmcp=1.1.3=h27ca646_0
+xz=5.2.6=h57fd34a_0
+yaml=0.2.5=h3422bc3_2
+zeromq=4.3.5=h965bd2d_0
+zipp=3.17.0=pyhd8ed1ab_0
+zlib=1.2.13=h53f4e23_5
+zstd=1.5.5=h4f39d0f_0
